make new category page special machine

--- a/special-purpose-machine.html
+++ b/special-purpose-machine.html
@@ -93,7 +93,7 @@
                 <h5 class="card-title">Special Purpose Machine</h5>
                 <p class="card-text">Model: SFI-XS 80BC,SFI-XS 80BC-S</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="special-purpose-machine/special-purpose-machine-sfi-xs-80bc-80bc-s.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
