make add new category page

--- a/special-purpose-machine.html
+++ b/special-purpose-machine.html
@@ -106,7 +106,7 @@
                 <h5 class="card-title">Special Purpose Machine</h5>
                 <p class="card-text">Model: SFI-CN-8R,SFI-CN-5R,SFI-CN-5ER,SFI-CN-5E,SFI-CN-PF5,SFI-CN-EP5</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="special-purpose-machine/special-purpose-machine-sfi-cn-series.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -119,7 +119,7 @@
                 <h5 class="card-title">Special Purpose Machine</h5>
                 <p class="card-text">Model: GT-RF6,GT-RF8,GT-RF10,GT-RF12,GT-RF14,GT-RF16,GT-RF30-B,GT-RF35-B</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="special-purpose-machine/special-purpose-machine-gt-rf-series.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
