make change of path wire bending machine

--- a/spring-forming-machines.html
+++ b/spring-forming-machines.html
@@ -80,7 +80,7 @@
                 <h5 class="card-title">CNC Spring Forming Machine</h5>
                 <p class="card-text">Model: SI-20 F, SI-35F</p>
                 <div class="product-actions">
-                  <a href="spring%20-forming/cnc-spring-forming-si-20f-si-35f.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="spring-forming/cnc-spring-forming-si-20f-si-35f.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -93,7 +93,7 @@
                 <h5 class="card-title">CNC Spring Forming Machine</h5>
                 <p class="card-text">Model: SI-25FR, SI-45 FR</p>
                 <div class="product-actions">
-                  <a href="spring%20-forming/cnc-spring-forming-si-25fr-si-45fr.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="spring-forming/cnc-spring-forming-si-25fr-si-45fr.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -106,7 +106,7 @@
                 <h5 class="card-title">Spring Forming Machine</h5>
                 <p class="card-text">Model: SFI-1025</p>
                 <div class="product-actions">
-                  <a href="spring%20-forming/spring-forming-machine-sfi-1025.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="spring-forming/spring-forming-machine-sfi-1025.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -119,7 +119,7 @@
                 <h5 class="card-title">Spring Forming Machine</h5>
                 <p class="card-text">Model: SFI-1225R</p>
                 <div class="product-actions">
-                  <a href="spring%20-forming/spring-forming-machine-sfi-1225r.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="spring-forming/spring-forming-machine-sfi-1225r.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -132,7 +132,7 @@
                 <h5 class="card-title">Spring Forming Machine</h5>
                 <p class="card-text">Model: SFI-1265R</p>
                 <div class="product-actions">
-                  <a href="spring%20-forming/spring-forming-machine-sfi-1265r.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="spring-forming/spring-forming-machine-sfi-1265r.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -145,7 +145,7 @@
                 <h5 class="card-title">Spring Forming Machine</h5>
                 <p class="card-text">Model: SFI-525R</p>
                 <div class="product-actions">
-                  <a href="spring%20-forming/spring-forming-machine-sfi-525r.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="spring-forming/spring-forming-machine-sfi-525r.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -158,7 +158,7 @@
                 <h5 class="card-title">Spring Forming Machine</h5>
                 <p class="card-text">Model: SFI-20</p>
                 <div class="product-actions">
-                  <a href="spring%20-forming/spring-forming-machine-sfi-20.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="spring-forming/spring-forming-machine-sfi-20.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
