--- a/wire-bending-machines.html
+++ b/wire-bending-machines.html
@@ -80,7 +80,7 @@
                 <h5 class="card-title">3D Wire Bending Machine</h5>
                 <p class="card-text">Model: SFI-3D408R</p>
                 <div class="product-actions">
-                  <a href="3d%20wire%20bending%20machine/3d-wire-bending-machine-sfi-3d408r.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="3d-wire-bending-machine/3d-wire-bending-machine-sfi-3d408r.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -93,7 +93,7 @@
                 <h5 class="card-title">3D Wire Bending Machine</h5>
                 <p class="card-text">Model: SFI-3D413R</p>
                 <div class="product-actions">
-                  <a href="3d%20wire%20bending%20machine/3d-wire-bending-machine-sfi-3d413r.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="3d-wire-bending-machine/3d-wire-bending-machine-sfi-3d413r.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -106,7 +106,7 @@
                 <h5 class="card-title">3D Wire Bending Machine</h5>
                 <p class="card-text">Model: SFI-3D-100-8A, SFI-3D-70-7A</p>
                 <div class="product-actions">
-                  <a href="3d%20wire%20bending%20machine/3d-wire-bending-machine-sfi-3d-100-8a-sfi-3d-70-7a.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="3d-wire-bending-machine/3d-wire-bending-machine-sfi-3d-100-8a-sfi-3d-70-7a.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
