make change deatil page link for special purpose machine

--- a/special-purpose-machine.html
+++ b/special-purpose-machine.html
@@ -132,7 +132,7 @@
                 <h5 class="card-title">Special Purpose Machine</h5>
                 <p class="card-text">Model: SFIXS-6W,SFI-XS-8W,SFI-XS-10W,SFI-XS-2060,SFI-XS-2080</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="special-purpose-machine/special-purpose-machine-sfi-xs-series.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
