MAKE CHANGE MAKE NEW DEATIL PAGE

--- a/special-purpose-machine.html
+++ b/special-purpose-machine.html
@@ -171,7 +171,7 @@
                 <h5 class="card-title">Special Purpose Machine</h5>
                 <p class="card-text">Model: SFI-SUS4 (stainless steel),SFI-SUS6 (stainless steel),SFI-2D60-6,SFI-3D80-8,SFI-3D80-10</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="special-purpose-machine/special-purpose-machine-sfi-sus-2d-3d-series.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -184,7 +184,7 @@
                 <h5 class="card-title">Special Purpose Machine</h5>
                 <p class="card-text">Model: SFI-SF-10T,SFI-SF-26T,SFI-SF-38T</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="special-purpose-machine/" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
