MAKE CHANGE NEW MAKE DEATIL PAGE

--- a/special-purpose-machine.html
+++ b/special-purpose-machine.html
@@ -184,7 +184,7 @@
                 <h5 class="card-title">Special Purpose Machine</h5>
                 <p class="card-text">Model: SFI-SF-10T,SFI-SF-26T,SFI-SF-38T</p>
                 <div class="product-actions">
-                  <a href="special-purpose-machine/" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="special-purpose-machine/special-purpose-machine-sfi-sf-series.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -197,7 +197,7 @@
                 <h5 class="card-title">Special Purpose Machine</h5>
                 <p class="card-text">Model: SFI-LR-30,SFI-LR-40,SFI-LR-30PC,SFI-LR-40PC,SFI-LR-50PC</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="special-purpose-machine/special-purpose-machine-sfi-sf-series.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
