MAKE CHANGE MAKE DEATIL PAGE

--- a/special-purpose-machine.html
+++ b/special-purpose-machine.html
@@ -210,7 +210,7 @@
                 <h5 class="card-title">Special Purpose Machine</h5>
                 <p class="card-text">Model: SFI-CR-35PC,SFI-CR-45PC,SFI-CR-60PC,SFI-CR-50</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="special-purpose-machine/special-purpose-machine-sfi-lr-series.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
