--- a/special-purpose-machine.html
+++ b/special-purpose-machine.html
@@ -197,7 +197,7 @@
                 <h5 class="card-title">Special Purpose Machine</h5>
                 <p class="card-text">Model: SFI-LR-30,SFI-LR-40,SFI-LR-30PC,SFI-LR-40PC,SFI-LR-50PC</p>
                 <div class="product-actions">
-                  <a href="special-purpose-machine/special-purpose-machine-sfi-sf-series.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="special-purpose-machine/special-purpose-machine-sfi-lr-series.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -210,7 +210,7 @@
                 <h5 class="card-title">Special Purpose Machine</h5>
                 <p class="card-text">Model: SFI-CR-35PC,SFI-CR-45PC,SFI-CR-60PC,SFI-CR-50</p>
                 <div class="product-actions">
-                  <a href="special-purpose-machine/special-purpose-machine-sfi-lr-series.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="special-purpose-machine/special-purpose-machine-sfi-cr-series.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -223,7 +223,7 @@
                 <h5 class="card-title">Special Purpose Machine</h5>
                 <p class="card-text">Model: SFI-CH5,SFI-CH5P,SFI-CH-5W,SFI-CH-5HW,SFI-CH-5B,SFI-AL</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="special-purpose-machine/" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
