make change form make working

--- a/special-purpose-machine/special-purpose-machine-sfi-lr-series.html
+++ b/special-purpose-machine/special-purpose-machine-sfi-lr-series.html
@@ -254,7 +254,7 @@
             <li><i class="fa-solid fa-location-dot"></i> Khasra No. 230 Nangli Sakrawati, Industrial Area, Najafgarh, New Delhi</li>
             <li><i class="fa-solid fa-phone"></i> +91 8700335277</li>
             <li><i class="fa-solid fa-phone"></i> +91 8178392837</li>
-            <li><i class="fa-solid fa-envelope"></i> info@shriyamas.com</li>
+            <li><i class="fa-solid fa-envelope"></i> info@saffroninternational.in</li>
           </ul>
           <div class="footer-social">
             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -294,3 +294,4 @@
   <script src="../js/main.js"></script>
 </body>
 </html>
+
