--- a/index.html
+++ b/index.html
@@ -362,19 +362,22 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <form class="contact-form">
+            <form class="contact-form" id="contactForm" method="post" action="contact.php" novalidate>
               <div class="row g-3">
                 <div class="col-md-6">
-                  <input type="text" class="form-control" name="name" placeholder="Full Name" />
+                  <input type="text" class="form-control" name="name" placeholder="Full Name" required />
                 </div>
                 <div class="col-md-6">
-                  <input type="email" class="form-control" name="email" placeholder="Email Address" />
+                  <input type="email" class="form-control" name="email" placeholder="Email Address" required />
                 </div>
                 <div class="col-12">
-                  <input type="text" class="form-control" name="subject"  placeholder="Subject" />
+                  <input type="text" class="form-control" name="subject" placeholder="Subject" required />
                 </div>
                 <div class="col-12">
-                  <textarea class="form-control" rows="4" name="message" placeholder="Message"></textarea>
+                  <input type="text" class="form-control" name="phone" placeholder="Phone Number" />
+                </div>
+                <div class="col-12">
+                  <textarea class="form-control" rows="4" name="message" placeholder="Message" required></textarea>
                 </div>
                 <div class="col-12">
                   <button type="submit" class="btn btn-primary w-100">Send Message</button>
