--- a/spring-forming-machines.html
+++ b/spring-forming-machines.html
@@ -202,7 +202,7 @@
             <li><i class="fa-solid fa-location-dot"></i> Khasra No. 230 Nangli Sakrawati, Industrial Area, Najafgarh, New Delhi</li>
             <li><i class="fa-solid fa-phone"></i> +91 8700335277</li>
             <li><i class="fa-solid fa-phone"></i> +91 8178392837</li>
-            <li><i class="fa-solid fa-envelope"></i> info@shriyamas.com</li>
+            <li><i class="fa-solid fa-envelope"></i> info@saffroninternational.in</li>
           </ul>
           
           <div class="footer-social">
@@ -227,3 +227,4 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
