make change php mailer server

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <form class="contact-form" id="contactForm" method="post" action="contact.php" novalidate>
+            <form class="contact-form" id="contactForm" action="contact.php" method="post" novalidate>
               <div class="row g-3">
                 <div class="col-md-6">
                   <input type="text" class="form-control" name="name" placeholder="Full Name" required />
@@ -444,6 +444,7 @@
       <div class="footer-credit">Developed By: <span>Viral Ads Media</span></div>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.all.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
