--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li><a class="dropdown-item" href="wire-bending-machines.html">Wire Bending Machines</a></li>
                 <li><a class="dropdown-item" href="coiling-machines.html">Coiling Machines</a></li>
                 <li><a class="dropdown-item" href="special-purpose-machine.html">Special Purpose Machines</a></li>
-                <li><a class="dropdown-item" href="#categories">Grinding Machines / Grinding Wheels</a></li>
+                <li><a class="dropdown-item" href="grinding-machines.html">Grinding Machines / Grinding Wheels</a></li>
                 <li><a class="dropdown-item" href="#categories">Furnace Machines</a></li>
                 <li><a class="dropdown-item" href="#categories">Controllers</a></li>
               </ul>
@@ -444,8 +444,8 @@
       <div class="footer-credit">Developed By: <span>Viral Ads Media</span></div>
     </div>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.all.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="js/main.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.12.4/sweetalert2.all.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script defer src="js/main.js"></script>
 </body>
 </html>
