make new deatil page

--- a/grinding-machines.html
+++ b/grinding-machines.html
@@ -80,7 +80,7 @@
                 <h5 class="card-title">Grinding Machine / Wheels</h5>
                 <p class="card-text">Model: SFI-01</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="grinding-machine/wheels/grinding-machine-wheels-sfi-01.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -226,4 +226,3 @@
   <script src="js/main.js"></script>
 </body>
 </html>
-
