make new deatil page of grinding machine

--- a/grinding-machines.html
+++ b/grinding-machines.html
@@ -93,7 +93,7 @@
                 <h5 class="card-title">Horizontal Spring Grinding Machine</h5>
                 <p class="card-text">Model: SFI-02</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="grinding-machine/wheels/horizontal-spring-grinding-machine-sfi-02.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
