make new deatil page of grinding machine

--- a/grinding-machines.html
+++ b/grinding-machines.html
@@ -106,7 +106,7 @@
                 <h5 class="card-title">Pendulum Spring Grinding Machine</h5>
                 <p class="card-text">Model: SFI-03</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="grinding-machine/wheels/pendulum-spring-grinding-machine-sfi-03.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -119,7 +119,7 @@
                 <h5 class="card-title">OD Spring Chamfering Machine</h5>
                 <p class="card-text">Model: SFI-04</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="grinding-machine/wheels/od-spring-chamfering-machine-sfi-04.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
