make deatil page of grinding machine

--- a/grinding-machines.html
+++ b/grinding-machines.html
@@ -132,7 +132,7 @@
                 <h5 class="card-title">Shot Peening Machine</h5>
                 <p class="card-text">Model: SFI-05</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="grinding-machine/wheels/shot-peening-machine-sfi-05.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
