make deatl page of grinding machine

--- a/grinding-machines.html
+++ b/grinding-machines.html
@@ -145,7 +145,7 @@
                 <h5 class="card-title">Dust Precipitator</h5>
                 <p class="card-text">Model: SFI-06</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="grinding-machine/wheels/dust-precipitator-sfi-06.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
