make change add new deatl page and email change

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
           <div class="col-lg-6 text-center">
             <div class="hero-image-wrap">
-              <img src="images/safron.png" alt="Spring Forming Machine" class="hero-image" />
+              <img src="images/hero-machine.png" alt="Spring Forming Machine" class="hero-image" />
             </div>
           </div>
         </div>
@@ -272,7 +272,7 @@
         </div>
       </div>
     </section>
-    <section class="section clients-section">
+    <!-- <section class="section clients-section">
       <div class="container">
         <div class="section-header text-center">
           <h2>Our Clients</h2>
@@ -291,7 +291,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <section id="testimonials" class="section testimonials-section d-none">
       <div class="container">
         <div class="section-header text-center">
