--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li><a class="dropdown-item" href="coiling-machines.html">Coiling Machines</a></li>
                 <li><a class="dropdown-item" href="special-purpose-machine.html">Special Purpose Machines</a></li>
                 <li><a class="dropdown-item" href="grinding-machines.html">Grinding Machines / Grinding Wheels</a></li>
-                <li><a class="dropdown-item" href="#categories">Furnace Machines</a></li>
+                <li><a class="dropdown-item" href="furnance-machines.html">Furnace Machines</a></li>
                 <li><a class="dropdown-item" href="#categories">Controllers</a></li>
               </ul>
             </li>
