--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="mainNav">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#categories" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
