make deatil page of furnance deatil page

--- a/furnance-machines.html
+++ b/furnance-machines.html
@@ -82,7 +82,7 @@
                 <p class="card-text">Model: SFI-01</p>
                 <p class="card-text">Rotary Retort Type, Pit-type, Car-bottom, Box-type</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="/furnance/furnance-sfi-01.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
