make new deatil page of furnance

--- a/furnance-machines.html
+++ b/furnance-machines.html
@@ -82,7 +82,7 @@
                 <p class="card-text">Model: SFI-01</p>
                 <p class="card-text">Rotary Retort Type, Pit-type, Car-bottom, Box-type</p>
                 <div class="product-actions">
-                  <a href="/furnance/furnance-sfi-01.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="furnance/furnance-sfi-01.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -95,7 +95,7 @@
                 <h5 class="card-title">Furnace</h5>
                 <p class="card-text">Model: SFI-02</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="furnance/furnance-sfi-02.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -108,13 +108,13 @@
                 <h5 class="card-title">Furnace</h5>
                 <p class="card-text">Model: SFI-03</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="furnance/furnance-sfi-03.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4">
+          <!-- <div class="col-md-6 col-lg-4">
             <div class="card product-card">
               <img src="images/furnance/10.png" class="card-img-top product-card-image" alt="Furnace Machine" />
               <div class="card-body">
@@ -126,7 +126,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
