--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <form class="contact-form" id="contactForm" action="contact.php" method="post" novalidate>
+            <form class="contact-form" id="contactForm" novalidate>
               <div class="row g-3">
                 <div class="col-md-6">
                   <input type="text" class="form-control" name="name" placeholder="Full Name" required />
