--- a/index.html
+++ b/index.html
@@ -362,16 +362,13 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <form class="contact-form" id="contactForm" novalidate>
+            <form class="contact-form" id="contactForm" action="mail-sending.php" method="post" novalidate>
               <div class="row g-3">
                 <div class="col-md-6">
                   <input type="text" class="form-control" name="name" placeholder="Full Name" required />
                 </div>
                 <div class="col-md-6">
                   <input type="email" class="form-control" name="email" placeholder="Email Address" required />
-                </div>
-                <div class="col-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required />
                 </div>
                 <div class="col-12">
                   <input type="text" class="form-control" name="phone" placeholder="Phone Number" />
@@ -446,6 +443,72 @@
   </footer>
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.12.4/sweetalert2.all.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    const contactForm = document.getElementById("contactForm");
+
+    if (contactForm) {
+      contactForm.addEventListener("submit", async (event) => {
+        event.preventDefault();
+        const formData = new FormData(contactForm);
+        const payload = Object.fromEntries(formData.entries());
+        const requiredFields = ["name", "email", "message"];
+        const missingField = requiredFields.find((field) => {
+          return !payload[field] || String(payload[field]).trim() === "";
+        });
+
+        if (missingField) {
+          if (window.Swal) {
+            Swal.fire("Missing info", "Please fill out all required fields.", "warning");
+          } else {
+            alert("Please fill out all required fields.");
+          }
+          return;
+        }
+
+        const submitButton = contactForm.querySelector("button[type=\"submit\"]");
+        if (submitButton) {
+          submitButton.disabled = true;
+        }
+
+        try {
+          const response = await fetch(contactForm.action, {
+            method: "POST",
+            body: formData,
+            headers: {
+              Accept: "application/json",
+            },
+          });
+
+          const responseText = await response.text();
+          let data = null;
+          if (responseText) {
+            data = JSON.parse(responseText);
+          }
+          if (!response.ok || !data || data.status !== "success") {
+            const serverMessage = data && data.message ? data.message : "Failed to send message.";
+            throw new Error(serverMessage);
+          }
+
+          contactForm.reset();
+          if (window.Swal) {
+            Swal.fire("Sent!", "Message sent successfully.", "success");
+          } else {
+            alert("Message sent successfully.");
+          }
+        } catch (error) {
+          if (window.Swal) {
+            Swal.fire("Error", error.message || "Failed to send message.", "error");
+          } else {
+            alert(error.message || "Failed to send message.");
+          }
+        } finally {
+          if (submitButton) {
+            submitButton.disabled = false;
+          }
+        }
+      });
+    }
+  </script>
   <script defer src="js/main.js"></script>
 </body>
 </html>
