make new deatil page of controller

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li><a class="dropdown-item" href="special-purpose-machine.html">Special Purpose Machines</a></li>
                 <li><a class="dropdown-item" href="grinding-machines.html">Grinding Machines / Grinding Wheels</a></li>
                 <li><a class="dropdown-item" href="furnance-machines.html">Furnace Machines</a></li>
-                <li><a class="dropdown-item" href="#categories">Controllers</a></li>
+                <li><a class="dropdown-item" href="controller/controller.html">Controllers</a></li>
               </ul>
             </li>
             <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
