--- a/coiling-machines/cnc-spring-making-machine-sfi-345.html
+++ b/coiling-machines/cnc-spring-making-machine-sfi-345.html
@@ -44,7 +44,7 @@
             <li class="nav-item"><a class="nav-link" href="../index.html#services">Services</a></li>
             <li class="nav-item"><a class="nav-link" href="../index.html#contact">Contact</a></li>
           </ul>
-          <div class="nav-contact d-none d-lg-flex align-items-center">
+          <div class="nav-contact d-flex align-items-center">
             <a href="https://saffroninternational.in/pdf/Catalog.pdf" class="contact-phone" download>
               <i class="fa-solid fa-file-pdf"></i> Brochure
             </a>
