--- a/controller/controller.html
+++ b/controller/controller.html
@@ -46,7 +46,7 @@
       border-radius: 8px;
     }
     .thumbnail-btn.active {
-      border-color: #1f9254;
+      border-color: #e269b4;
     }
     .detail-card {
       background: #fff;
@@ -95,7 +95,7 @@
             <li class="nav-item"><a class="nav-link" href="../index.html#services">Services</a></li>
             <li class="nav-item"><a class="nav-link" href="../index.html#contact">Contact</a></li>
           </ul>
-          <div class="nav-contact d-none d-lg-flex align-items-center">
+          <div class="nav-contact d-flex align-items-center">
             <a href="https://saffroninternational.in/pdf/Catalog.pdf" class="contact-phone" download>
               <i class="fa-solid fa-file-pdf"></i> Brochure
             </a>
@@ -104,7 +104,6 @@
       </div>
     </nav>
   </header>
-
   <main>
     <section class="detail-hero">
       <div class="container">
@@ -122,7 +121,6 @@
         </div>
       </div>
     </section>
-
     <section class="section">
       <div class="container">
         <div class="row g-4 align-items-start">
